# public/docs/api/swagger.json
@@ -1136,6 +1136,66 @@
                 }
             }
         },
+        "/articles/latest": {
+            "get": {
+                "tags": [
+                    "articles"
+                ],
+                "parameters": [
+                    {
+                        "$ref": "#/parameters/page"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "properties": {
+                                "status": {
+                                    "type": "string"
+                                },
+                                "data": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/definitions/Article"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/articles/popular": {
+            "get": {
+                "tags": [
+                    "articles"
+                ],
+                "parameters": [
+                    {
+                        "$ref": "#/parameters/page"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "properties": {
+                                "status": {
+                                    "type": "string"
+                                },
+                                "data": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/definitions/Article"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/articles/{article_id}": {
             "parameters": [
                 {
